--- a/web/style.css
+++ b/web/style.css
@@ -28,7 +28,7 @@ a {
 
 .header-bg {
   height: 200px;
-  background-image: url('bg.png');
+  background-image: url('bg-2.png');
   background-size: cover;
   background-position: center;
 }
